Use get(0) instead of getFirst() which is @sicnce 21